# phlower

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
frontend/: index.html  openapi-ts.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  app.css  util.ts
frontend/src/api/: client.ts
frontend/src/components/: Badge.tsx  BookmarkButton.tsx  BrokerStatus.tsx  DataTable.tsx  Sparkline.tsx  StatusDot.tsx
frontend/src/hooks/: useBookmarks.ts  useSSE.ts
frontend/src/pages/: InvocationDetail.tsx  Search.tsx  TaskDetail.tsx  TaskList.tsx
k8s/: deployment.yaml  secret.yaml  service.yaml
scripts/: fake_tasks.py
src/phlower/: __init__.py  __main__.py  app.py  config.py  events.py  models.py  schemas.py  snapshot.py  sqlite_recovery.py  sqlite_store.py  sse.py  store.py  views.py  workers.py
src/phlower/api/: health.py  invocations.py  stream.py  tasks.py
src/phlower/static/: app.css  app.js  package.json  pnpm-lock.yaml
src/phlower/templates/: base.html  invocation_detail.html  search.html  task_detail.html  task_list.html
src/phlower/templates/partials/: broker_status.html  invocation_table.html  search_results.html  task_summary.html  task_table.html
