[project]
name = "phlower"
version = "0.1.0"
description = "Lightweight, task-centric Celery monitoring and debugging dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "celery[redis]>=5.3",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.9",
    "fastdigest>=0.12",
]

[project.scripts]
phlower = "phlower.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
phlower = ["frontend_dist/**/*"]
